--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             Layout a griglia con diversi breakpoint (sm, md, lg).
         </p>
     </header>
-    <main class="text-white">
+    <main>
         <div class="container">
             <div class="row mb-4">
                 <div class="col-12 col-md-6 col-lg-4 text-black bg-light p-4">
@@ -28,7 +28,7 @@
                         Larghezza intera su dispositivi piccoli, metà larghezza su dispositivi medi e un terzo su dispositivi grandi.
                     </p>
                 </div>
-                <div class="col-12 col-md-6 col-lg-8 bg-secondary p-4">
+                <div class="col-12 col-md-6 col-lg-8 bg-secondary p-4 text-white">
                     <h2>
                         Colonna 2
                     </h2>
@@ -39,7 +39,7 @@
             </div>
 
             <div class="row mb-4">
-                <div class="col-6 col-md-4 bg-primary p-4">
+                <div class="col-6 col-md-4 bg-primary p-4 text-white">
                     <h2>
                         Colonna 1
                     </h2>
@@ -47,7 +47,7 @@
                         Metà larghezza su dispositivi piccoli e un terzo su dispositivi medi e più grandi.
                     </p>
                 </div>
-                <div class="col-6 col-md-4 bg-success p-4">
+                <div class="col-6 col-md-4 bg-success p-4 text-white">
                     <h2>
                         Colonna 2
                     </h2>
@@ -55,7 +55,7 @@
                         Metà larghezza su dispositivi piccoli e un terzo su dispositivi medi e più grandi.
                     </p>
                 </div>
-                <div class="col-12 col-md-4 bg-danger p-4">
+                <div class="col-12 col-md-4 bg-danger p-4 text-white">
                     <h2>
                         Colonna 3
                     </h2>
@@ -66,7 +66,7 @@
             </div>
 
             <div class="row mb-5">
-                <div class="col-6 col-md-3 bg-info p-4">
+                <div class="col-6 col-md-3 bg-info p-4 text-white">
                     <h2>
                         Colonna 1
                     </h2>
@@ -74,7 +74,7 @@
                         Metà larghezza su dispositivi piccoli e un quarto su dispositivi medi e più grandi.
                     </p>
                 </div>
-                <div class="col-6 col-md-3 bg-warning p-4">
+                <div class="col-6 col-md-3 bg-warning p-4 text-white">
                     <h2>
                         Colonna 2
                     </h2>
@@ -82,7 +82,7 @@
                         Metà larghezza su dispositivi piccoli e un quarto su dispositivi medi e più grandi.
                     </p>
                 </div>
-                <div class="col-6 col-md-3 bg-black p-4">
+                <div class="col-6 col-md-3 bg-black p-4 text-white">
                     <h2>
                         Colonna 3
                     </h2>
@@ -90,7 +90,7 @@
                         Metà larghezza su dispositivi piccoli e un quarto su dispositivi medi e più grandi.
                     </p>
                 </div>
-                <div class="col-6 col-md-3 bg-white text-black p-4">
+                <div class="col-6 col-md-3 bg-light text-black p-4">
                     <h2>
                         Colonna 4
                     </h2>
