--- a/bonus/index.html
+++ b/bonus/index.html
@@ -6,6 +6,12 @@
     <title>
         Bootstrap Layout
     </title>
+    <link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
+    <style>
+        body {
+            font-family: 'Open Sans';
+        }
+    </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
   </head>
   <body class="bg-white">
@@ -19,7 +25,7 @@
     </header>
     <main class="text-white">
         <div class="container">
-            <div class="row row-cols-1 row-cols-md-2 mb-4">
+            <div class="row row-cols-1 row-cols-md-2 mb-4 mx-2">
                 <div class="col col-lg-4 text-black bg-light p-4">
                     <h2>
                         Colonna 1
@@ -38,7 +44,7 @@
                 </div>
             </div>
 
-            <div class="row row-cols-md-3 mb-4">
+            <div class="row row-cols-md-3 mb-4 mx-2">
                 <div class="col-6 bg-primary p-4">
                     <h2>
                         Colonna 1
@@ -65,7 +71,7 @@
                 </div>
             </div>
 
-            <div class="row row-cols-2 row-cols-md-4 mb-5">
+            <div class="row row-cols-2 row-cols-md-4 mb-5 mx-2">
                 <div class="bg-info p-4">
                     <h2>
                         Colonna 1
