--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
     <main>
         <div class="container">
-            <div class="row mb-4">
+            <div class="row mb-4 mx-2">
                 <div class="col-12 col-md-6 col-lg-4 text-black bg-light p-4">
                     <h2>
                         Colonna 1
@@ -38,7 +38,7 @@
                 </div>
             </div>
 
-            <div class="row mb-4">
+            <div class="row mb-4 mx-2">
                 <div class="col-6 col-md-4 bg-primary p-4 text-white">
                     <h2>
                         Colonna 1
@@ -65,7 +65,7 @@
                 </div>
             </div>
 
-            <div class="row mb-5">
+            <div class="row mb-5 mx-2">
                 <div class="col-6 col-md-3 bg-info p-4 text-white">
                     <h2>
                         Colonna 1
