--- a/bonus/index.html
+++ b/bonus/index.html
@@ -12,7 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
   </head>
   <body style="font-family: 'Open Sans', sans-serif; font-weight: 300;" class="bg-white">
-    <header class="text-center my-5">
+    <header class="text-center my-5 mx-2">
         <h1>
             Bootstrap 5 Responsive Grid
         </h1>
