--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>
             Bootstrap 5 Responsive Grid
         </h1>
-        <p>
+        <p class="text-secondary-emphasis">
             Layout a griglia con diversi breakpoint (sm, md, lg).
         </p>
     </header>
