--- a/bonus-discord-bootstrap-remake/index.html
+++ b/bonus-discord-bootstrap-remake/index.html
@@ -42,6 +42,14 @@
         </div>
       </nav>
     </header>
+
+    <main>
+      <div id="jumbotron" style="background-image: url(./img/jumbo.png); background-size: cover; background-repeat: no-repeat; min-height: 440px;" class="py-2">
+        <div class="container my-container-sm d-flex flex-column justify-content-around">
+
+        </div>
+      </div>
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
   </body>
 </html>
