Refactor button styles and update jumbotron layout for improved aesthetics in index.html and style.css

--- a/bonus-discord-bootstrap-remake/index.html
+++ b/bonus-discord-bootstrap-remake/index.html
@@ -38,15 +38,24 @@
               </li>
             </ul>
           </div>
-          <button class="btn btn-primary" type="submit">Accedi</button>    
+          <button class="btn btn-primary text-black rounded-pill py-2 px-3" type="submit">Accedi</button>    
         </div>
       </nav>
     </header>
 
     <main>
-      <div id="jumbotron" style="background-image: url(./img/jumbo.png); background-size: cover; background-repeat: no-repeat; min-height: 440px;" class="py-2">
-        <div class="container my-container-sm d-flex flex-column justify-content-around">
-
+      <div id="jumbotron" style="background-image: url(./img/jumbo.png); background-size: cover; background-repeat: no-repeat; height: 440px;" class="py-2">
+        <div class="container my-container-sm d-flex flex-column text-center text-white justify-content-center gap-3" style="height: 100%;">
+          <h1 class="fw-bold">
+            Il tuo posto per parlare
+          </h1>
+          <p>
+            Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.
+          </p>
+          <div class="container d-flex justify-content-around px-5">
+            <button class="btn btn-primary text-black rounded-pill py-2 px-3">&#11107; Scarica per Mac</button>
+            <button class="btn btn-dark rounded-pill py-2 px-3">Apri Discord nel tuo browser</button>
+        </div>
         </div>
       </div>
     </main>
