Add fandom section with image and description in index.html and adjust image max-width in style.css

--- a/bonus-discord-bootstrap-remake/index.html
+++ b/bonus-discord-bootstrap-remake/index.html
@@ -95,6 +95,22 @@
           </div>
         </div>
       </section>
+      <section id="fandom" class="px-3">
+        <div class="container my-container-xl">
+          <div class="row py-4 px-2">
+            <div class="col-12 col-lg-8 d-flex align-content-center py-3">
+              <img src="./img/item3.svg" alt="Fandom">
+            </div>
+            <div class="col-12 col-lg-4 d-flex flex-column px-5 justify-content-center align-items-center text-center">
+              <h2 class="fw-bold">
+                Da pochi a un fandom
+              </h2>
+              <p>
+                Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.
+              </p>
+            </div>
+          </div>
+      </section>
         
           
         </div>
