Add video call section with content and styling in index.html and style.css

--- a/bonus-discord-bootstrap-remake/index.html
+++ b/bonus-discord-bootstrap-remake/index.html
@@ -111,7 +111,23 @@
             </div>
           </div>
       </section>
-        
+      <section id="video-call" class="px-3 py-5">
+        <div class="container my-container-xl text-center">
+            <h2 class="fw-bold">
+              Tecnologia affidabile per tenersi in contatto
+            </h2>
+            <p>
+              Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.
+            </p>
+            <img src="./img/item4-big.svg" alt="Video Call" class="pb-5">
+            <h4 class="fw-bold py-4 mx-4">
+              Pronto a iniziare la tua avventura?
+            </h4>
+            <button class="btn btn-secondary rounded-pill py-2 px-3 border-0">
+              &#11107; Scarica per Mac
+            </button>
+        </div>
+    </section>
           
         </div>
     </main>
