--- a/bonus-discord-bootstrap-remake/index.html
+++ b/bonus-discord-bootstrap-remake/index.html
@@ -102,7 +102,7 @@
               <img src="./img/item3.svg" alt="Fandom">
             </div>
             <div class="col-12 col-lg-4 d-flex flex-column px-5 justify-content-center align-items-center text-center">
-              <h2 class="fw-bold">
+              <h2 class="fw-bold pt-4">
                 Da pochi a un fandom
               </h2>
               <p>
@@ -127,10 +127,152 @@
               &#11107; Scarica per Mac
             </button>
         </div>
-    </section>
-          
-        </div>
+      </section>
     </main>
+    <footer class="text-white p-5">
+      <div class="container my-container-xl d-flex flex-column p-3 gap-2 lh-lg">
+          <div class="col big py-3">
+              <h3 class="fw-bold py-4">
+                Il tuo posto per parlare
+              </h3>
+              <div class="d-flex">
+                  <img id="ita" src="./img/ita.png" alt="Italian Flag">
+                  <p class="d-block mx-2">
+                    Italiano &#8964;
+                  </p>
+              </div>
+              <div id="icons" class="fs-1">
+                  <i class="fa-brands fa-twitter"></i>
+                  <i class="fa-brands fa-instagram p-2"></i>
+                  <i class="fa-brands fa-facebook p-2"></i>
+                  <i class="fa-brands fa-youtube"></i>
+              </div>
+          </div>
+          <div class="col py-3">
+              <ul class="list-unstyled">
+                  <li>
+                    <h5 class="fw-bold">
+                      Prodotto
+                    </h5>
+                  </li>
+                  <li>
+                    Scarica
+                  </li>
+                  <li>
+                    Perché Discord
+                  </li>
+                  <li>
+                    Nitro
+                  </li>
+                  <li>
+                    Sicurezza
+                  </li>
+                  <li>
+                    Assistenza
+                  </li>
+              </ul>
+          </div>
+          <div class="col py-3">
+              <ul class="list-unstyled">
+                  <li>
+                    <h5 class="fw-bold">
+                      Compagnia
+                    </h5>
+                  </li>
+                  <li>
+                    Chi siamo
+                  </li>
+                  <li>
+                    Lavora con noi
+                  </li>
+                  <li>
+                    Marchio
+                  </li>
+                  <li>
+                    Redazione
+                  </li>
+                  <li>
+                    Negozio
+                  </li>
+              </ul>
+          </div>
+          <div class="col py-3">
+              <ul class="list-unstyled">
+                  <li>
+                    <h5 class="fw-bold">
+                      Risorse
+                    </h5>
+                  </li>
+                  <li>
+                    Scarica
+                  </li>
+                  <li>
+                    Perché Discord
+                  </li>
+                  <li>
+                    Nitro
+                  </li>
+                  <li>
+                    Sicurezza
+                  </li>
+                  <li>
+                    Assistenza
+                  </li>
+                  <li>
+                    Scarica
+                  </li>
+                  <li>
+                    Perché Discord
+                  </li>
+                  <li>
+                    Nitro
+                  </li>
+                  <li>
+                    Sicurezza
+                  </li>
+                  <li>
+                    Assistenza
+                  </li>
+              </ul>
+          </div>
+          <div class="col py-3">
+              <ul class="list-unstyled">
+                  <li>
+                    <h5 class="fw-bold">
+                      Norme
+                    </h5>
+                  </li>
+                  <li>
+                    Scarica
+                  </li>
+                  <li>
+                    Perché Discord
+                  </li>
+                  <li>
+                    Nitro
+                  </li>
+                  <li>
+                    Sicurezza
+                  </li>
+                  <li>
+                    Assistenza
+                  </li>
+              </ul>
+          </div>
+      </div>
+      <hr>
+      <div class="container d-flex py-4 justify-content-between align-items-center">
+          <div>
+            <img src="./img/logo.svg" alt="Logo Discord">
+          </div>
+          <div>
+            <button class="btn btn-secondary rounded-pill py-2 px-3">
+              Registrati
+            </button>
+          </div>
+      </div>
+  </footer>
+  <!-- /.footer -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
   </body>
 </html>
