Update layout and styling for jumbotron and footer sections in index.html and style.css

--- a/bonus-discord-bootstrap-remake/index.html
+++ b/bonus-discord-bootstrap-remake/index.html
@@ -52,14 +52,14 @@
           <p class="lh-base">
             Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.
           </p>
-          <div class="container d-flex justify-content-around px-5">
-            <button class="btn btn-primary text-black rounded-pill py-2 px-3">
+          <div class="container d-flex align-items-center gap-3 px-5 flex-column">
+            <button class="btn btn-primary text-black rounded-pill py-2 px-3 border-0">
               &#11107; Scarica per Mac
             </button>
-            <button class="btn btn-dark rounded-pill py-2 px-3">
+            <button class="btn btn-dark rounded-pill py-2 px-3 border-0">
               Apri Discord nel tuo browser
             </button>
-        </div>
+          </div>
         </div>
       </div>
       <section id="invite" class="px-3">
@@ -261,7 +261,7 @@
           </div>
       </div>
       <hr>
-      <div class="container d-flex py-4 justify-content-between align-items-center">
+      <div class="container my-container-xl d-flex py-4 justify-content-between align-items-center">
           <div>
             <img src="./img/logo.svg" alt="Logo Discord">
           </div>
