--- a/bonus-discord-bootstrap-remake/index.html
+++ b/bonus-discord-bootstrap-remake/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
-    <header class="bg-primary p-2">
+    <header class="p-2">
       <nav class="navbar navbar-dark navbar-expand-lg">
         <div class="container d-flex justify-content-center">
           <img src="./img/logo.svg" alt="Discord Logo" class="navbar-brand mx-5">
@@ -42,7 +42,6 @@
         </div>
       </nav>
     </header>
-
     <main>
       <div id="jumbotron" class="py-2">
         <div class="container my-container-sm d-flex flex-column text-center text-white justify-content-center gap-3" style="height: 100%;">
